# EKG_App_Objektorientierung

./: .gitignore  README.md  main.py  pyproject.toml
data/: person_db.json
source/: ekgdata.py  main.py  person.py  read_data.py  read_pandas.py  read_write_data.py
