[project]
name = "EKG_App_Steamlit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cedric Rissi", email = "cedric.rissi2003@gmail.com"},
]
dependencies = [
    "pandas>=3.0.3",
    "numpy>=2.4.4",
    "plotly-express>=0.4.1",
    "streamlit>=1.57.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
